--- a/todo.html
+++ b/todo.html
@@ -17,10 +17,10 @@
                 <div class="bar"></div>
             </div>
             <ul class="menu" id="menu">
-               <li class="list"><a href="accueil.html">Accueil</a></li>
-                <li class="list"><a href="calcul.html">Calculatrice</a></li>
-                <li class="list"><a href="todo.html">To-do-list</a></li>
-                <li class="list"><a href="quotes.html">Générateur de citations</a></li>
+               <a class="list" href="accueil.html">Accueil</a>
+               <a class="list" href="calcul.html">Calculatrice</a>
+               <a class="list" href="todo.html">To-do-list</a>
+               <a class="list" href="quotes.html">Générateur de citations</a>
             </ul>
     </header>
    <main>
