--- a/calcul.html
+++ b/calcul.html
@@ -27,13 +27,13 @@
     <div class="calculator">
         <div class="content">
             <input type="text" placeholder="0" id="inputBox">
-            <div onclick="calc()">
+            <div>
                 <button class="otherbtn">AC</button>
                 <button class="otherbtn">DE</button>
                 <button class="operator">%</button>
                 <button class="operator">/</button>
             </div> 
-            <div onclick="calc()">
+            <div>
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
