--- a/todo.html
+++ b/todo.html
@@ -16,12 +16,14 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
+            <nav>
             <ul class="menu" id="menu">
-               <a class="list" href="accueil.html">Accueil</a>
-               <a class="list" href="calcul.html">Calculatrice</a>
-               <a class="list" href="todo.html">To-do-list</a>
-               <a class="list" href="quotes.html">Générateur de citations</a>
-            </ul>
+            <li class="nav-item"><a class="list" href="accueil.html">Accueil</a></li>
+            <li class="nav-item"><a class="list" href="calcul.html">Calculatrice</a></li>
+            <li class="nav-item"><a class="list" href="todo.html">To-do-list</a></li>
+            <li class="nav-item"><a class="list" href="quotes.html">Générateur de citations</a></li>
+        </ul>
+        </nav>
     </header>
    <main>
 
@@ -36,7 +38,7 @@
 
     </div>
 
-    <ul id="taskList"></ul>
+    <ul id="taskList" class="task-list"></ul>
 
     </div>
     </main>   
