--- a/quotes.html
+++ b/quotes.html
@@ -12,17 +12,7 @@
 
        <h3>Générateur de citations</h3>
        
-       <div class="menu-burger" id="menuBurger">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
-            <ul class="menu" id="menu">
-                <li><a href="accueil.html">Accueil</a></li>
-                <li><a href="calcul.html">Calculatrice</a></li>
-                <li><a href="todo.html">To-do-list</a></li>
-                <li><a href="quotes.html">Générateur de citations</a></li>
-            </ul>
+       <div id="header"></div>
     </header>
    <main> 
     <div class="container">
