--- a/todo.html
+++ b/todo.html
@@ -11,19 +11,7 @@
 
        <h3>To-do-list</h3>
        
-       <div class="menu-burger" id="menuBurger">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
-            <nav>
-            <ul class="menu" id="menu">
-            <li class="nav-item"><a class="list" href="accueil.html">Accueil</a></li>
-            <li class="nav-item"><a class="list" href="calcul.html">Calculatrice</a></li>
-            <li class="nav-item"><a class="list" href="todo.html">To-do-list</a></li>
-            <li class="nav-item"><a class="list" href="quotes.html">Générateur de citations</a></li>
-        </ul>
-        </nav>
+       <div id="header"></div>
     </header>
    <main>
 
