--- a/Citations/quotes.html
+++ b/Citations/quotes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Générateur de Citations</title>
     <link rel="stylesheet" href="quotes.css">
+    <link rel="stylesheet" href="../Header/header.css">
 </head>
 <body>
 
