--- a/Calculatrice/calcul.html
+++ b/Calculatrice/calcul.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculatrice</title>
     <link rel="stylesheet" href="calcul.css">
-    <link rel="stylesheet" href="../Header/header.css">
+    <link rel="stylesheet" href="/Header/header.css">
 </head>
 <body>
     <header>
