--- a/To-do-list/todo.html
+++ b/To-do-list/todo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestionnaire de tâches</title>
     <link rel="stylesheet" href="todo.css">
-    <link rel="stylesheet" href="../Header/header.css">
+    <link rel="stylesheet" href="/Header/header.css">
 </head>
 <body>
     <header>
