--- a/Header/header.html
+++ b/Header/header.html
@@ -15,10 +15,10 @@
                 <div class="bar"></div>
             </div>
             <ul class="menu" id="menu">
-                <li><a href="../Accueil/accueil.html">Accueil</a></li>
-                <li><a href="../Calculatrice/calcul.html">Calculatrice</a></li>
-                <li><a href="../To-do-list/todo.html">To-do-list</a></li>
-                <li><a href="../Citations/quotes.html">Générateur de citations</a></li>
+                <li><a href="/Accueil/accueil.html">Accueil</a></li>
+                <li><a href="/Calculatrice/calcul.html">Calculatrice</a></li>
+                <li><a href="/To-do-list/todo.html">To-do-list</a></li>
+                <li><a href="/Citations/quotes.html">Générateur de citations</a></li>
             </ul>
     </header>
 
