--- a/Calculatrice/index.html
+++ b/Calculatrice/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculatrice</title>
-    <link rel="stylesheet" href="calcul.css">
-    <link rel="stylesheet" href="/Header/header.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Header/style.css">
 </head>
 <body>
     <header>
@@ -50,6 +50,6 @@
         </div>
     </div>
     </main>
-    <script src="calcul.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
