--- a/Citations/index.html
+++ b/Citations/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Générateur de Citations</title>
-    <link rel="stylesheet" href="quotes.css">
-    <link rel="stylesheet" href="/Header/header.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Header/style.css">
 </head>
 <body>
 
@@ -25,6 +25,6 @@
         <button id="copyQuote">Copier la citation</button>
     </div>
    </main>
-    <script src="quotes.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
