--- a/Header/index.html
+++ b/Header/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>header</title>
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -15,10 +15,10 @@
                 <div class="bar"></div>
             </div>
             <ul class="menu" id="menu">
-                <li><a href="/Accueil/accueil.html">Accueil</a></li>
-                <li><a href="/Calculatrice/calcul.html">Calculatrice</a></li>
-                <li><a href="/To-do-list/todo.html">To-do-list</a></li>
-                <li><a href="/Citations/quotes.html">Générateur de citations</a></li>
+                <li><a href="/Accueil">Accueil</a></li>
+                <li><a href="/Calculatrice">Calculatrice</a></li>
+                <li><a href="/To-do-list">To-do-list</a></li>
+                <li><a href="/Citations">Générateur de citations</a></li>
             </ul>
     </header>
 
