--- a/To-do-list/index.html
+++ b/To-do-list/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestionnaire de tâches</title>
-    <link rel="stylesheet" href="todo.css">
-    <link rel="stylesheet" href="/Header/header.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Header/style.css">
 </head>
 <body>
     <header>
@@ -36,6 +36,6 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-    <script src="todo.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
